--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "caranbar_co",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
